# ftn-lprsemu

./: Cargo.toml  LICENSE  README.md  example.asm
data/: ram_prefix.vhd  ram_suffix.vhd  rom_prefix.vhd  rom_suffix.vhd
package/archlinux/: .SRCINFO  .gitignore  PKGBUILD
package/debian/: .gitignore
package/debian/package/DEBIAN/: control
src/: asm.rs  assembler.rs  error.rs  instructions.rs  load.rs  main.rs  parser.rs  processor.rs
src/assembler/: isa.pest
src/instructions/: display.rs  from_str.rs  implementation.rs  macro.rs  to_vhdl.rs
src/parser/: data.rs  error.rs  isa.pest  text.rs
src/processor/: error.rs  flag_registers.rs  implementation.rs  processor.rs
src/processor/implementation/: alu.rs  control_flow.rs  debug.rs  display.rs  memory.rs
