[package]
name = "lprsemu"
version = "0.3.0"
edition = "2021"
authors = ["Filip Parag <filip@parag.rs>"]
license = "MIT"
description = "Emulator and debugger for LPRS1 ISA & CPU"
readme = "README.md"
repository = "https://github.com/filiparag/ftn-lprsemu"
keywords = ["emulator", "assembler", "assembly"]
categories = ["command-line-interface", "emulators", "parsing"]
include = ["/src"]
maintenance = { status = "passively-maintained" }
rust-version = "1.68"

[dependencies]
pest = "2.5.2"
pest_derive = "2.5.2"
