[package]
name = "lprsemu"
version = "0.5.0"
edition = "2021"
authors = ["Filip Parag <filip@parag.rs>"]
license = "MIT"
description = "Emulator, debugger and assembler for LPRS1 ISA & CPU"
readme = "README.md"
repository = "https://github.com/filiparag/ftn-lprsemu"
keywords = ["emulator", "debugger", "assembler", "assembly"]
categories = [
    "command-line-interface",
    "emulators",
    "parsing",
    "development-tools::debugging",
]
include = ["/src"]
maintenance = { status = "passively-maintained" }
rust-version = "1.66"

[[bin]]
name = "lprsemu"
path = "src/main.rs"

[[bin]]
name = "lprsasm"
path = "src/assembler.rs"

[dependencies]
clearscreen = { version = "2.0.0", features = ["windows-console"] }
pest = "2.5.2"
pest_derive = "2.5.2"

[profile.release]
strip = true
