[package]
name = "lprsemu"
version = "0.5.0"
edition = "2021"
authors = ["Filip Parag <filip@parag.rs>"]
license = "MIT"
description = "Emulator, debugger and assembler for LPRS1 ISA & CPU"
readme = "README.md"
repository = "https://github.com/filiparag/ftn-lprsemu"
keywords = ["emulator", "debugger", "assembler", "assembly"]
categories = [
    "command-line-interface",
    "emulators",
    "parsing",
    "development-tools::debugging",
]
include = ["/src"]
maintenance = { status = "passively-maintained" }
rust-version = "1.68"

[[bin]]
name = "lprsemu"
path = "src/main.rs"

[[bin]]
name = "lprsasm"
path = "src/assembler.rs"

[dependencies]
clearscreen = { version = "2.0.1", features = ["windows-console"] }
pest = "2.7.5"
pest_derive = "2.7.5"

[profile.release]
strip = true
